--- a/src/01-confianza.html
+++ b/src/01-confianza.html
@@ -81,16 +81,16 @@
     <p>
       La fórmula es más que sencilla pero fundamental: no basta amar, basta que
       se sientan amdos. En esa reciprocidad está la base fundante de la
-      confianza. En la familiaridad con el grupo, en el compartir la vida (aunque
-      sea un día a la semana). Cuando uno se da cuenta que es amdo (que se
-      preocupan sinceramente, que solo quieren lo mejor para esa persona) la
+      confianza. En la familiaridad con el grupo, en el compartir la vida
+      (aunque sea un día a la semana). Cuando uno se da cuenta que es amdo (que
+      se preocupan sinceramente, que solo quieren lo mejor para esa persona) la
       confianza llega al instante. Si nuestro grupo de Rastreadores-Hogueras
-      confía en nosotros y nosotros respondemos responsablemente a esa confianza,
-      nuestra tarea educadora no solo va a ser mucho más sencilla sino que será
-      realmente salesiana. La confianza se gana con el testimonio que damos,
-      acompañando, aconsejando, sin caer en el innecesario “amiguismo” con lo
-      cual solo logramos desdibujar el papel formativo y adulto que debemos
-      presentar ante el grupo.
+      confía en nosotros y nosotros respondemos responsablemente a esa
+      confianza, nuestra tarea educadora no solo va a ser mucho más sencilla
+      sino que será realmente salesiana. La confianza se gana con el testimonio
+      que damos, acompañando, aconsejando, sin caer en el innecesario
+      “amiguismo” con lo cual solo logramos desdibujar el papel formativo y
+      adulto que debemos presentar ante el grupo.
     </p>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
     <h3>- Confianza en lo poco y en lo mucho (Lc 16, 10-12)</h3>
@@ -98,9 +98,9 @@
       <em
         >«El que es fiel en lo poco, también es fiel en lo mucho, y el que es
         deshonesto en lo poco, tabién es deshonesto en lo mucho. Si ustedes no
-        son fieles en el uso del dinero injusto, ¿quién les confiará el verdadero
-        bien? Y si no son fieles con lo ajeno, ¿quién les confiará lo que les
-        pertenece a ustedes?.»</em
+        son fieles en el uso del dinero injusto, ¿quién les confiará el
+        verdadero bien? Y si no son fieles con lo ajeno, ¿quién les confiará lo
+        que les pertenece a ustedes?.»</em
       >
     </p>
     <h3>- Reﬂexión:</h3>
@@ -202,8 +202,9 @@
     </p>
     <p>
       No hay que confundir confianza con “me cae bien”. Por supuesto que el
-      simpatizar puede ser una manera de comenzar una relación de confianza, pero
-      la confianza verdadera es algo más profundo que se va ganando de a poco.
+      simpatizar puede ser una manera de comenzar una relación de confianza,
+      pero la confianza verdadera es algo más profundo que se va ganando de a
+      poco.
     </p>
     <p><strong>Clima de confianza en el grupo:</strong></p>
     <p>
@@ -232,9 +233,9 @@
 
     <p>
       <strong>- Aclaración:</strong> La idea de la Palabra de Dios es relacionar
-      la idea de “ceguera” con la falta de confianza. ¿Podemos contar con alguien
-      en que no confiamos? ¿Podemos guiar, hacer un bien, sin ser dignos de
-      confianza del otro?
+      la idea de “ceguera” con la falta de confianza. ¿Podemos contar con
+      alguien en que no confiamos? ¿Podemos guiar, hacer un bien, sin ser dignos
+      de confianza del otro?
     </p>
     <h3>ACTIVIDAD 2: MUÑECOS DE GOMA</h3>
     <h3>- Orientación:</h3>
@@ -399,9 +400,9 @@
         >“Muchas veces confiamos en un médico: está bien hacerlo, porque el
         médico está allí para curar; tenemos confianza en una persona: hermanos,
         hermanas, que nos pueden ayudar. Está bien tener esta confianza humana
-        entre nosotros. Pero nos olvidamos de la confianza en el Se- ñor: ésta es
-        la clave del éxito en la vida. ¡La confianza en el Señor, encomendémonos
-        al Señor!”</em
+        entre nosotros. Pero nos olvidamos de la confianza en el Se- ñor: ésta
+        es la clave del éxito en la vida. ¡La confianza en el Señor,
+        encomendémonos al Señor!”</em
       >
     </p>
     <br />
@@ -410,9 +411,9 @@
     <p>
       La oración del explorador nos dice “Confiando Señor, en tu bondad y en tu
       gracia y y en el axilio maternal de Maria… Amén”. En medio de las
-      dificultades, cuando creemos que todo está perdido, Dios siempre está y nos
-      mueve a tener esperanza. Nos alienta a seguir adelante con la seguridad
-      que Él nos acompaña, asiste y guía.
+      dificultades, cuando creemos que todo está perdido, Dios siempre está y
+      nos mueve a tener esperanza. Nos alienta a seguir adelante con la
+      seguridad que Él nos acompaña, asiste y guía.
     </p>
     <p>
       Con humildad, conscientes que solos no podemos, seguimos adelante con la
