--- a/src/01-confianza.html
+++ b/src/01-confianza.html
@@ -387,12 +387,11 @@
       Francisco:
     </p>
     <p>
-      “Dios se fía de no
       <em
-        >sotros, Dios tiene esperanza en nosotros, y esto es lo mismo para
-        todos. No le desilusionemos. No nos dejem</em
-      >
-      os llevar por el miedo: devolvamos confianza con confianza”<br />
+        >“Dios se fía de no sotros, Dios tiene esperanza en nosotros, y esto es
+        lo mismo para todos. No le desilusionemos. No nos dejemos llevar por el
+        miedo: devolvamos confianza con confianza”</em
+      ><br />
       – Papa Francisco, 2014
     </p>
     <p>
